# crow-islands

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark  build.rs  makefile  script  script_face  shapestest  simple300.mdl  simpleanim.mdl  variety_face.mdl  variety_face_mover.mdl  varytest.mdl
src/: color.rs  curves.rs  edge_matrix.rs  grid.rs  image.rs  lib.rs  lighter.rs  main.rs  mdl.l  mdl.y  parser.rs  shapes3d.rs  transform.rs  utils.rs  vector3d.rs
src/curves/: bezier.rs  circle.rs  hermite.rs  mod.rs  parametric.rs
src/matrix/: const_2d.rs  dynamic_2d.rs  edge_matrix.rs  mod.rs  parallel_grid.rs  polygon_matrix.rs
src/parser/: grammar.pest  mdl.y  mod.rs
src/shapes3d/: cube.rs  mod.rs  sphere.rs  torus.rs
src/tests/: cstack.rs  curves.py  curves.rs  dancing.mdl  hanoi  lighting.rs  line.rs  matrix.rs  mdl.rs  mod.rs  picmaker.rs  polygons.py  polygons.rs  rccircuit  shapes3d.rs  solenoid  solenoid.mdl  solids.rs  torusfractal  transform.py  transform.rs  vase
src/tests/clockscripts/: clock0  clock00  clock01  clock02  clock03  clock04  clock05  clock06  clock07  clock08  clock09  clock1  clock10  clock11  clock12  clock13  clock14  clock15  clock16  clock17  clock18  clock19  clock2  clock20  clock21  clock22  clock23  clock24  clock25  clock26  clock27  clock28  clock29  clock3  clock30  clock31  clock32  clock33  clock34  clock35  (+30 more)
