[package]
name = "graphics_year2"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cfgrammar="0.12.0"
lrpar="0.12.0"
lrlex="0.12.0"

[dependencies]
itertools = "0.10.3"
rayon = "1.5.1"
rand = "0.8.5"
cfgrammar="0.12.0"
lrpar="0.12.0"
lrlex="0.12.0"

[profile.release]
codegen-units=1
lto="fat"
