[package]
name = "graphics_year2"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.10.3"
rayon = "1.5.1"
rand = "0.8.5"
pest = "2.1.3"
pest_derive = "2.1.0"

[profile.release]
codegen-units=8
lto="thin"
